# DataGenerator

./: .gitignore
sources/: CMakeLists.txt  main.cpp
sources/Connectors/: Connector.h  CsvConnector.h  postgresConnector.cpp  postgresConnector.h
sources/dataGenerator/: formatInterpreter.h  generator.h  manager.cpp  manager.h  stringGenerator.cpp  stringGenerator.h  uniformGenerator.h
